@@ -1,0 +1,3 @@
+block                   = block
+block_role              = block_role
+block_assignment        = block_assignment
