@@ -1,0 +1,12 @@
+login                   = login
+organisation            = organisation
+organisation_type       = organisation_type
+org_preference          = org_preference
+permission              = permission
+preference              = preference
+role                    = role
+role_permission         = role_permission
+user                    = usr
+user_permission         = user_permission
+user_preference         = user_preference
+user_session            = user_session
